# termux-x11

./: .gitignore  .gitmodules  1README.md  LICENSE  QWEN.md  README.md  SECURITY.md  Xwayland.arch  backend-x11.c  backend.h  build.gradle  build_termux_package  gradle.properties  local.properties  log.h  log.txt  main.c  meson.build  renderer.c  renderer.h  settings.gradle  termux-startx11  termux-x11  termux-x11-preference  test_xwayland  trigger.txt
.github/: FUNDING.yml  (+1 more)
app/src/main/cpp/: CMakeLists.txt  loading_sign.c  lorie.version  mcat.c
app/src/main/cpp/lorie/: Android.mk  InitInput.c  InitOutput.c  InputXKB.c  Window.c  activity.c  android-keycodes-to-x11-keysyms.h  android-to-linux-keycodes.h  android.c  android.cpp  android_.cpp  buffer.c  buffer.h  clipboard.c  cmdentrypoint.c  compositor.cpp  dri3.c  egw.h  exec-helper.c  execl_xkbcomp.c  fbconfigs.h  gen_stubs.py  glamor.c  glstubs.h  linux-event-codes.h  lorie-client.cpp  lorie.h  lorieGlx.c  lorie_looper.hpp  lorie_message_queue.hpp  lorie_wayland_server.cpp  lorie_wayland_server.hpp  renderer.c  renderer.h  resolutions.h  tx11-request.c  tx11.xml  whereami.c  whereami.h  xcb-connection.hpp
app/src/main/cpp/lorie-client/: android-keycodes-to-x11-keysyms.h  lorie-client.cpp  lorie_message_queue.hpp  xcb-connection.hpp
app/src/main/cpp/lorie/shm/: shmem.c
app/src/main/cpp/lorie/xr/: base.cpp  base.h  framebuffer.c  framebuffer.h  input.cpp  main.c  main.cpp  main.h  math.c  math.h  renderer.cpp  renderer.h
app/src/main/cpp/patches/: Xtrans.patch  dix-config.h.in  ks_tables.h  pixman.patch  x11.patch  xcb.patch  xkbcomp.patch  xserver.patch
app/src/main/cpp/patches/virglrenderer/: 0007-Ensure-EGL-and-GLES.patch.beforehostbuild
app/src/main/cpp/recipes/: X11.cmake  Xau.cmake  Xdmcp.cmake  Xext.cmake  Xfixes.cmake  Xfont2.cmake  Xtrans.cmake  Xxf86vm.cmake  drm.cmake  epoxy.cmake  fontenc.cmake  freetype.cmake  mcat.cmake  md.cmake  mesa.cmake  pixman.cmake  tirpc.cmake  virglrenderer.cmake  xcb-errors.cmake  xcb.cmake  xkbcommon.cmake  xkbcomp.cmake  xkbfile.cmake  xorgproto.cmake  xserver.cmake  xshmfence.cmake
app/src/main/cpp/xrio/: android.c  engine.c  framebuffer.c  renderer.c
app/src/main/jni/libxkbcommon/xkbcommon/: .autom4te.cfg  .editorconfig  .travis.yml  COPYING  Makefile.am  NEWS  PACKAGING  README.md  autogen.sh  configure.ac  makekeys.py  meson.build  meson_options.txt  xkbcommon-uninstalled.pc.in  xkbcommon-x11-uninstalled.pc.in  xkbcommon-x11.map  xkbcommon-x11.pc.in  xkbcommon.map  xkbcommon.pc.in  xkbregistry.map
app/src/main/jni/libxkbcommon/xkbcommon/bench/: .gitignore  bench.c  compose.c  key-proc.c  rules.c  rulescomp.c
app/src/main/jni/libxkbcommon/xkbcommon/build-aux/: output.1  requests  traces.0  traces.1  traces.2
app/src/main/jni/libxkbcommon/xkbcommon/doc/: .gitignore  Doxyfile.in  compat.md  doxygen-extra.css  keymap-format-text-v1.md  keymap-format-text-v1.txt  quick-guide.md  rules-format.md  rules-format.txt
app/src/main/jni/libxkbcommon/xkbcommon/fuzz/: fuzz.sh
app/src/main/jni/libxkbcommon/xkbcommon/scripts/: doxygen-wrapper  makeheader  makekeys  map-to-def  perfect_hash.py
app/src/main/jni/libxkbcommon/xkbcommon/src/: context-priv.c  context.c  context.h  darray.h  keymap-priv.c  keymap.c  keymap.h  keysym-utf.c  keysym.c  keysym.h  ks_tables.h  registry.c  scanner-utils.h  state.c  text.c  utf8.c  utils.h
app/src/main/jni/libxkbcommon/xkbcommon/src/compose/: config.h  parser.c  paths.c  paths.h  state.c  table.c  table.h
app/src/main/jni/libxkbcommon/xkbcommon/src/x11/: keymap.c  util.c
app/src/main/jni/libxkbcommon/xkbcommon/src/xkbcomp/: action.c  ast-build.c  ast.h  compat.c  expr.c  include.c  keycodes.c  keymap-dump.c  keymap.c  keywords.gperf  parser.c  parser.h  parser.y  rules.c  scanner.c  symbols.c  types.c  vmod.c  xkbcomp.c
app/src/main/jni/libxkbcommon/xkbcommon/test/: .gitignore  atom.c  buffercomp.c  common.c  compose.c  context.c  filecomp.c  interactive-evdev.c  interactive-x11.c  keymap.c  keyseq.c  keysym.c  log.c  print-compiled-keymap.c  registry.c  rmlvo-to-kccgst.c  rules-file.c  rulescomp.c  state.c  stringcomp.c  symbols-leak-test.py  test-keysym.py  test.h  tool-option-parsing.py  utf8.c  x11.c  x11comp.c  xkeyboard-config-test.py.in
app/src/main/jni/libxkbcommon/xkbcommon/test/data/: sync.sh
app/src/main/jni/libxkbcommon/xkbcommon/tools/: compile-keymap.c  compose.c  how-to-type.c  interactive-evdev.c  interactive-wayland.c  interactive-x11.c  registry-list.c  tools-common.c  tools-common.h  xkbcli.c
app/src/main/jni/libxkbcommon/xkbcommon/xkbcommon/: xkbcommon-compose.h
app/src/main/jni/lorie/: Android.mk  android.cpp  backend-android.c  backend-x11.c  backend.h  client.cpp  clipboard.cpp  compositor.cpp  egl-helper.cpp  interfaces.h  lorie_egl_helper.cpp  lorie_message_queue.cpp  lorie_wayland_server.cpp  lorie_wayland_server.hpp  main.c  meson.build  message-queue.cpp  output.cpp  renderer.c  renderer.cpp  seat.cpp  surface.cpp
app/src/main/jni/lorie/backend/android/: android-app.cpp  android_app.cpp  keymaps.h  utils.c
app/src/main/jni/lorie/backend/x11/: stacktrace.cpp  x11-window.cpp  x11-window.hpp  x11.cpp
app/src/main/jni/lorie/include/: LorieImpls.hpp  ashmem.h  log.h  lorie-client.hpp  lorie-compositor.hpp  lorie-egl-helper.hpp  lorie-message-queue.hpp  lorie-renderer.hpp  lorie_compositor.hpp  lorie_message_queue.hpp  lorie_renderer.hpp  shm.h
app/src/main/jni/lorie/locale/: android-keycodes.h  android-utils.c  evdev-keycodes.h  generator  generator.c  keymaps.h  make.sh  test.c
app/src/main/jni/lorie/scanner/: rebuild  scanner  wayland-server.hpp  wayland.cpp  wayland.hpp
app/src/main/jni/lorie/scanner/protocol/: wayland.xml
app/src/main/jni/lorie/scanner/src/: config.h  scanner.c  wayland-private.h  wayland-util.c
app/src/main/jni/lorie/scripts/: build  filter  test-xwayland
app/src/main/jni/lorie/utils/: log.cpp  utils.cpp
x11-client-experimental/src/main/cpp/: CMakeLists.txt  loading_sign.c
x11-client-experimental/src/main/cpp/lorie/: lorie.cpp  lorie_message_queue.cpp
(+302 files in other folders)
